# optmatch

./: .gitignore  CMakeLists.txt  README.md
include/optmatch/: cc.h  exceptions.h  generator.h  optmatch.h  prims.h  xml.h
samples/ocr/: CMakeLists.txt  main.cpp
src/chrmatch/: CMakeLists.txt  chrmatch.cpp  ftfont.cpp  generator.cpp  matrix.h  stdafx.cpp  stdafx.h  utils.h  winfont.cpp
src/samples/ocr/: CMakeLists.txt  main.cpp
